# we-dash

./: README.md  deploy.sh  prd.md  pyproject.toml
we_dash/: __init__.py  app.py  app.tcss  commands.py  discovery.py
